# Difix3D

./: .gitignore  LICENSE.txt  README.md  requirements.txt
examples/: utils.py
examples/gsplat/: simple_trainer_difix3d.py
examples/gsplat/datasets/: colmap.py
examples/nerfstudio/: pyproject.toml
examples/nerfstudio/difix3d/: difix3d.py  difix3d_config.py  difix3d_datamanager.py  difix3d_field.py  difix3d_pipeline.py  difix3d_trainer.py
src/: dataset.py  infer3.sh  inference_difix.py  loss.py  model.py  mv_unet.py  pipeline_difix.py  printres.py  train_difix.py
